[tool.poetry]
name = "vatsim-data-api-proxy"
version = "0.1.0"
description = "proxy for the vatsim data api"
authors = ["Alex Chesters <alex@cheste.rs>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.135"
aws-lambda-powertools = {extras = ["tracer"], version = "^2.3.1"}
aiohttp = "^3.10.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
